# HeteroModes

./: .gitignore  README.md  neuromaps_issue.md  pyproject.toml  setup.py
data/heteromaps/: central_patch.txt  desc-eiratio1_space-fsLR_den-32k_hemi-L.func.gii  desc-eiratio3.2_space-fsLR_den-32k_hemi-L.func.gii  desc-null2_space-fsLR_den-32k_hemi-L.func.gii  desc-scavg_space-fsLR_den-32k_hemi-L.func.gii  heteromaps_files.json
data/nulls/: data-myelinmap_space-fsLR_den-4k_hemi-L_nmodes-500_nnulls-5000_nulls.npy  data-myelinmap_space-fsLR_den-4k_hemi-L_nmodes-500_nnulls-5000_nulls_resample-True.npy
data/parcellations/: 17_visual_cortical_hierarchy_rois.npy  parc-schaefer300_space-fsLR_den-32k_hemi-L.label.gii  parc-schaefer400_space-fsLR_den-32k_hemi-L.label.gii
heteromodes/: __init__.py  eigentools.py  models.py  params.py  plotting.py  restingstate.py  solver.py  utils.py  wave.py
heteromodes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: 1_calc_eigenmodes.ipynb  1_calc_eigenmodes.py  1a_gen_param_combs.py  1b_calc_eigenmodes.sh  1b_get_valid_combs.py  1c_get_valid_combs.py  2_view_hetero_py.ipynb  3_recon_accuracy.ipynb  3_recon_accuracy.m  Bortho_reconSpatial.asv  Bortho_reconSpatial.m  Bortho_simulateFC.m  calc_hetero_modes.py  calc_phase_fcd.m  config.json  gen_ab_combs.py  heteroEffectsOnWaveSim.asv  hmap_corrs.ipynb  plotHeteroModes.asv  plotHeteroModes.m  plotHeteroModes2.m  plotModes.m  plot_modes.ipynb  prepare_hcp_data.py  reconAccuracy.m  reconSpatialMaps.asv  reconSpatialMaps.m  simulateEvoked.m  simulateFC.asv  simulateFC.m  simulateFC_combineResults.m  simulateFC_optimise.m  simulateFC_plotBestResults.m  simulateFC_plotResults.asv  simulateFC_plotResults.m  simulateRestingState.m  startProject.m  waveModel.m
scripts/data_generation/: gen_macaque_eiratio.py  gen_nulls.py
scripts/model_rest/: compile_null_results.py  gen_ext_input.py  gen_macaque_eiratio.py  generate_nulls.py  model_rest.py  model_rest_indiv.py  model_rs_crossval.py  model_rs_network_fcd.ipynb  model_rs_null_results.ipynb  mrs_indiv_results.ipynb  network_edgefc.ipynb  optimisation.py  optimisation_de.py  optimisation_group.py  optimisation_results.py  optimisation_results_2params.py  optimisation_results_3params.py  optimisation_results_nulls.py  results_model_rest.ipynb  results_model_rs.ipynb  results_model_rs_best.ipynb  run_optimisation.sh  test_model.ipynb
scripts/model_rs/: calc_empirical_fc_and_phase.py  empirical_results.ipynb  gen_ext_input.py  model_rs.py  model_rs_crossval.py  model_rs_crossval_results.ipynb  model_rs_crossval_results_compare.ipynb  model_rs_networks.ipynb  model_rs_null_results.ipynb  model_rs_optuna.py  mrs_individual.py  run_crossval.sh  run_model_rs.sh  run_model_rs_single.sh  run_nulls.sh
scripts/preprocessing/: calc_empirical_fc_and_phase.py  empirical_results.ipynb  prepare_hcp_data.py  prepare_hcp_tfmri.py  prepare_human_data.py  prepare_rsfmri.py  prepare_tfmri_hcp.py
scripts/reconstruction/: optimise_rsfmri_recon.py  optimise_tfmri_recon.py  recon_rsfmri.py  recon_rsfmri_indiv.ipynb  recon_rsfmri_indiv.py  recon_tfmri.ipynb  results_recon_rsfmri.ipynb  run_recon_rsfmri.sh
scripts/sandbox/: 1a_gen_artificial_map.py  2_view_hetero_mat.ipynb  Bortho_reconRestingState.m  corr.m  heteroEffectsOnWaveSim.m  (+12 more)
(+65 files in other folders)
