[project]
name = "heteromodes"
version = "0.1.0"
description = "Toolbox for simulating and analyzing heterogeneous wave dynamics based on neural field theory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brainspace>=0.1.20",
    "fbpca>=1.0",
    "h5py>=3.14.0",
    "joblib>=1.5.1",
    "neuromaps>=0.0.5",
    "nibabel>=5.3.2",
    "nsbtools",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "setuptools>=80.9.0",
]

[project.optional-dependencies]
nulls = [
    "eigenstrapping>=0.0.1.5",
    "netneurotools==0.2.4",
]
preprocessing = [
    "scikit-learn>=1.7.0",
]
plotting = [
    "matplotlib>=3.10.3",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "imageio>=2.37.0",
    "ipykernel>=6.29.5",
    "memory-profiler>=0.61.0",
    "numba>=0.60.0",
    "numexpr>=2.10.2",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["heteromodes"]

[tool.uv.sources]
nsbtools = { path = "../repos/nsbtools", editable = true }
