[project]
name = "heteromodes"
version = "0.1.0"
description = "Toolbox for simulating and analyzing heterogeneous wave dynamics based on neural field theory."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "brainspace>=0.1.20",
    "fbpca>=1.0",
    "h5py>=3.14.0",
    "joblib>=1.5.1",
    "nibabel>=5.3.2",
    "numpy>=2.0.2",
    "scipy>=1.13.1",
    "tqdm>=4.67.1",
    "neuromodes @ git+https://github.com/VictorBarnes/neuromodes.git@dev"
]

[project.optional-dependencies]
plotting = [
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.3",
    "nest-asyncio>=1.6.0",
    "pyvista[jupter,jupyter,notebook,trame]>=0.46.4",
    "seaborn>=0.13.2",
    "trame-vtk>=2.10.0",
    "trame-vuetify>=3.1.0",
]
dev = [
    "imageio>=2.37.2",
    "ipykernel>=7.1.0",
    "memory-profiler>=0.61.0",
    "neuromaps>=0.0.5",
    "numba>=0.62.1",
    "numexpr>=2.14.1",
    "scikit-learn>=1.7.0",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["heteromodes"]
